--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -32,6 +32,6 @@ jobs:
           # в значение GITHUB_TOKEN помещается ссылка на ваш секрет в репозитории
           # в данном случае его название KEY
           GITHUB_TOKEN: ${{ secrets.ST_LUCKKY }}
-          BRANCH: gh-pages
+          BRANCH: master
           FOLDER: public
           CLEAN: true
