--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -1,18 +1,24 @@
+# название
 name: Project test & build
 
+# целевые события для запуска
+# в данном случае это push и pull_request, в ветку prod
 on:
   push:
-    branches: [ master ]
+    branches: [ prod ]
   pull_request:
-    branches: [ master ]
+    branches: [ prod ]
 
+# выполняемые действия
 jobs:
-  build:
-
+  build-and-deploy:
     runs-on: ubuntu-latest
-
+    
+    # запускаются по шагам
+    # name - название шага
+    # в github actions будет выводиться название шага, и процессы
     steps:
-    - name: Checkout 🛎️
+      - name: Checkout 🛎️
         uses: actions/checkout@v2.3.1
         with:
           persist-credentials: false
@@ -31,7 +37,7 @@ jobs:
         with:
           # в значение GITHUB_TOKEN помещается ссылка на ваш секрет в репозитории
           # в данном случае его название KEY
-          GITHUB_TOKEN: ${{ secrets.ST_LUCKKY }}
-          BRANCH: master
+          GITHUB_TOKEN: ${{ secrets.KEY }}
+          BRANCH: gh-pages
           FOLDER: public
           CLEAN: true
