--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,9 +5,9 @@ name: Project test & build
 # в данном случае это push и pull_request, в ветку prod
 on:
   push:
-    branches: [ prod ]
+    branches: [ master ]
   pull_request:
-    branches: [ prod ]
+    branches: [ master ]
 
 # выполняемые действия
 jobs:
