--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,7 @@ jobs:
         run: npm run test
 
       - name: Build 👷
-        run: npm run build
+        run: npm run start
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@3.7.1
