--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,14 +30,14 @@ jobs:
         run: npm run test
 
       - name: Build 👷
-        run: npm run start
+        run: npm run build
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@3.7.1
         with:
           # в значение GITHUB_TOKEN помещается ссылка на ваш секрет в репозитории
           # в данном случае его название KEY
-          GITHUB_TOKEN: ${{ secrets.ST_LUCKKY }}
+          GITHUB_TOKEN: ${{ secrets.My_Key }}
           BRANCH: master
           FOLDER: public
           CLEAN: true
