--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,7 +37,7 @@ jobs:
         with:
           # в значение GITHUB_TOKEN помещается ссылка на ваш секрет в репозитории
           # в данном случае его название KEY
-          GITHUB_TOKEN: ${{ secrets.My_Key }}
+          GITHUB_TOKEN: ${{ secrets.ST_LUCKKY }}
           BRANCH: master
           FOLDER: public
           CLEAN: true
